--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 701118993418682392
 textchannel = 701118993418682391
 ladderchannel = 
 jungsanchannel = 
