--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 796035545880592444
-textchannel = 800375009096106014
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
@@ -10,11 +10,11 @@ itemchannel =
 
 before_alert = 1
 before_alert1 = 5
-mungChk1 = 15
-mungChk2 = 15
+mungChk1 = 10
+mungChk2 = 10
 delmungcnt = 20
 
-bossInfoNum = 4
+bossInfoNum = 3
 
 restarttime = 04:30
 restartPeriod = 1
