--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 796035545880592444
 textchannel = 800375009096106014
 ladderchannel = 
 jungsanchannel = 
